<?xml version="1.0"?>
<package>
  <name>grid_map_swarm</name>
  <version>0.2.0</version>
  <description>Algorithmic implementation of random search as a finite state machine</description>

  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>grid_map_core</build_depend>
   <build_depend>grid_map_ros</build_depend>
   <build_depend>grid_map_cv</build_depend>
   <build_depend>grid_map_filters</build_depend>
   <build_depend>grid_map_loader</build_depend>
   <build_depend>grid_map_msgs</build_depend>
   <build_depend>grid_map_octomap</build_depend>
   <build_depend>grid_map_rviz_plugin</build_depend>
   <build_depend>grid_map_visualization</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>octomap_msgs</build_depend>
   <build_depend>filters</build_depend>
   <build_depend>tf</build_depend>

   <run_depend>roscpp</run_depend>
   <run_depend>grid_map_core</run_depend>
   <run_depend>grid_map_ros</run_depend>
   <run_depend>grid_map_cv</run_depend>
   <run_depend>grid_map_filters</run_depend>
   <run_depend>grid_map_loader</run_depend>
   <run_depend>grid_map_msgs</run_depend>
   <run_depend>grid_map_octomap</run_depend>
   <run_depend>grid_map_rviz_plugin</run_depend>
   <run_depend>grid_map_visualization</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>octomap_msgs</run_depend>
   <run_depend>filters</run_depend>
   <run_depend>tf</run_depend>
  <export>

  </export>
</package>
